...
                    children: [
                      Expanded(child: HomeBalance()),

                      Space(width: values.Size.s5),

                      HomeBalanceToggle(
                        key: ValueKey("homeToggle"),
                      )
                    ],
                  ),

                  Text(
                    Strings.walletBalance,
...
                    children: [
                      const Expanded(child: HomeSendMoneyButton()),

                      const Space(width: values.Size.s10),

                      SecondaryButton(
                        key: const ValueKey('transactionsButton'),
                        onClicked: () => context.push(Routes.transactions),
                        icon: SvgPicture.asset(SvgAssets.icTransactions),
                      ),
                    ],
                  ),

...
