...
  final _controller = TextEditingController();

  void showPrompt(String animPath, String promptMessage) {
    showModalBottomSheet(
      context: context,
      builder: (context) => Container(
        key: const ValueKey('sendMoneyBottomSheet'),
        height: MediaQuery.sizeOf(context).height * 0.35,
        alignment: Alignment.center,
        padding: const EdgeInsets.symmetric(horizontal: values.Size.s16),
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          children: [
...
        hideSoftKeyboard(),
        showPrompt(AnimAssets.animError, state.error),
      },
      _ => null
    },
    child: TextField(
      key: const ValueKey('moneyInputField'),
      controller: _controller,
      onChanged: (value) => context.read<SendMoneyCubit>().amountChanged(value),
      keyboardType: TextInputType.number,
      inputFormatters: [
        CurrencyTextInputFormatter.currency(
          locale: Constants.locale,
...
